--- a/content/themes/ghostium-master/post.hbs
+++ b/content/themes/ghostium-master/post.hbs
@@ -23,6 +23,9 @@
               <li class="post-meta-item">
                 <a href="#disqus_thread" data-disqus-identifier="{{comment_id}}">Comments</a>
               </li>
+	      <li class="post-meta-item">
+	       {{reading_time}}
+	      </li>
             </ul>
             <h1 itemprop="name headline" class="post-title"><a href="{{url}}" itemprop="url" data-pjax title="{{{title}}}">{{{title}}}</a></h1>
             {{! A subtitle not available in Ghosts yet }}
