--- a/content/themes/ghostium-master/default.hbs
+++ b/content/themes/ghostium-master/default.hbs
@@ -38,6 +38,14 @@
 
     <link rel="stylesheet" href="{{asset 'css/main.min.css'}}">
 
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-N4HD7KN');</script>
+<!-- End Google Tag Manager -->
+
     <script type="text/javascript">
       {{> custom/config}}
 
@@ -64,7 +72,11 @@
     {{ghost_head}}
   </head>
   <body class="{{body_class}}">
-
+  
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N4HD7KN"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
     {{> drawer this}}
 
     <div class="drawer-overlay"></div>
@@ -103,4 +115,7 @@
       }
     </script>
   </body>
+  
+  
+  
 </html>
